<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onRootViewClick">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRootViewClick">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            android:background="@color/shock_pink"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.AppBarOverlay"
            app:theme="@style/AppTheme.AppBarOverlay" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/header_larvae_survey"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter" />

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_horizontal_margin"
        android:onClick="onRootViewClick"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
                style="@style/TextViewTanrabad.Label"
                android:text="@string/place_name"/>

        <EditText
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/touch_to_type_place_name"
                android:inputType="text"/>

        <TextView
                style="@style/TextViewTanrabad.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textIsSelectable="false"/>

        <EditText
                android:id="@+id/address_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/touch_to_define_address"
                android:inputType="text"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content"
                android:orientation="horizontal">

            <TextView
                style="@style/TextViewTanrabad"
                android:text="@string/place_type"
                android:textIsSelectable="false" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/place_type_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <LinearLayout
                    android:id="@+id/place_subtype_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_between_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/place_subtype_label"
                        style="@style/TextViewTanrabad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false"
                        tools:text="ประเภทศาสนสถาน"/>

                <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/place_subtype_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_between_content"
                android:orientation="horizontal">

            <TextView
                style="@style/TextViewTanrabad"
                android:text="@string/place_location" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/edit_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_location" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="500dp">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/add_location_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent_50">

                <Button
                    android:id="@+id/add_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/define_building_location" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
