<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ทันระบาด</string>
    <string name="app_fullname">ทันระบาดสำรวจ</string>
    <string name="title_activity_survey">สำรวจ</string>
    <string name="title_activity_edit_survey">แก้ไขสำรวจ</string>
    <string name="save">บันทึก</string>
    <string name="save_place_failed">บันทึกสถานที่ไม่สำเร็จ</string>
    <string name="save_building_failed">บันทึกอาคารไม่สำเร็จ</string>
    <string name="save_survey_failed">บันทึกการสำรวจไม่สำเร็จ</string>
    <string name="user_not_found">ไม่พบข้อมูลผู้ใช้งาน</string>
    <string name="container_not_found">ไม่พบรายการภาชนะ</string>
    <string name="please_enter_resident">โปรดระบุจำนวนผู้อาศัย</string>
    <string name="over_total_container">จำนวนภาชนะที่พบไม่ควรมากกว่าภาชนะทั้งหมด</string>

    <string name="number_of_resident">จำนวนผู้อยู่อาศัย</string>
    <string name="person">คน</string>
    <string name="indoor">ภายในอาคาร</string>
    <string name="outdoor">ภายนอกอาคาร</string>
    <string name="total">ทั้งหมด</string>
    <string name="found">พบ</string>

    <string name="survey_container_description">ภาชนะที่สำรวจ</string>
    <string name="survey_container_bg_description">ภาพพื้นหลังการสำรวจภาชนะ</string>
    <string name="title_card_place_in_database">@string/find_place_by_database</string>
    <string name="title_card_place_recent_survey">@string/find_place_by_recent_survey</string>
    <string name="title_card_building_list">รายชื่ออาคาร</string>

    <!--building category-->
    <string name="building_icon">ไอคอนอาคาร</string>
    <string name="building_not_found">ไม่พบข้อมูลอาคาร</string>
    <string name="building_list_not_found">ไม่พบอาคาร</string>
    <string name="add_building">เพิ่มอาคาร</string>
    <string name="building_name">ชื่ออาคาร/เลขที่บ้าน</string>
    <string name="place_icon">ไอคอนหน้าสถานที่สำรวจ</string>
    <string name="place_bg">พื้นหลังหน้าสถานที่สำรวจ</string>
    <string name="place_not_found">ไม่พบข้อมูลสถานที่</string>
    <string name="place_no_location">%1$s ไม่มีข้อมูลพิกัด ต้องทำการบันทึกพิกัดก่อนทำการสำรวจ</string>
    <string name="cant_save_same_building_name">ไม่สามารถบันทึกได้ เนื่องจากชื่ออาคารนี้มีอยู่แล้ว</string>
    <string name="number_building_list">จำนวนรายการของรายชื่ออาคารหน้าระบุอาคารสำรวจ</string>
    <string name="survey_building_history">ประวัติการสำรวจ</string>
    <string name="survey_building_history_not_found">ไม่พบประวัติการสำรวจ</string>
    <string name="survey_more_building_button_text">กดเพื่อสำรวจอาคารเพิ่ม</string>
    <string name="finish">สิ้นสุด</string>

    <!--location-->
    <string name="save_location">บันทึกพิกัด</string>
    <string name="add_location">เพิ่มพิกัด</string>
    <string name="edit_location">แก้ไขพิกัด</string>
    <string name="define_building_location">ระบุพิกัดอาคาร</string>
    <string name="define_place_location">ระบุพิกัดสถานที่</string>
    <string name="remove_location">ลบพิกัด</string>
    <string name="please_define_location">กรุณาระบุพิกัด</string>
    <string name="please_define_building_location">กรุณาระบุพิกัดของอาคาร</string>
    <string name="confirm_add_building_location">ยืนยันบันทึกพิกัดอาคารหรือไม่</string>

    <!--place type-->
    <string name="village_community">หมู่บ้าน/ชุมชน</string>
    <string name="school">สถานศึกษา</string>
    <string name="factory">โรงงาน</string>
    <string name="not_define_place_type">ทั้งหมด</string>

    <string name="please_define_building_name">กรุณาระบุชื่ออาคาร</string>
    <string name="please_define_house_no">กรุณาระบุบ้านเลขที่</string>
    <string name="building_edit">แก้ไขอาคาร</string>
    <string name="survey_place_not_found">ไม่พบสถานที่ที่สำรวจ</string>
    <string name="find_place_by_database">ค้นหาจากคลังข้อมูล</string>
    <string name="find_place_by_recent_survey">สถานที่ที่สำรวจล่าสุด</string>
    <string name="number_place_list_in_database">จำนวนรายการของรายชื่อสถานที่ที่แถบคลังข้อมูลตามประเภทที่เลือก</string>
    <string name="survey">สำรวจ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="start_survey">เริ่มสำรวจ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="torch">ไฟฉาย</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="define_building_survey">ระบุอาคารสำรวจ</string>
    <string name="define_place_survey">ระบุสถานที่สำรวจ</string>
    <string name="abort_survey">ยกเลิกการสำรวจ</string>

    <string name="got_it">รับทราบ</string>
    <string name="enable_gps">เปิดการตั้งค่า GPS</string>
    <string name="gps_dialog_tilte">GPS ยังไม่ได้เปิดการใช้งาน</string>
    <string name="gps_dialog_message">คุณต้องการเปิดการตั้งค่าการใช้งาน GPS หรือไม่</string>
    <string name="survey_duration">เวลาที่ใช้สำรวจ %1$s</string>
    <string name="format_ci">CI %1$d%%</string>
    <string name="format_container_count"><![CDATA[ภาชนะทั้งหมด <font color=#E91E63>%1$d</font> พบลูกน้ำยุงลาย <font color=#E91E63>%2$d</font>]]></string>
    <string name="format_house_survey">
        <![CDATA[สำรวจ <font color=#E91E63>%1$d</font> พบ <font color=#E91E63>%2$d</font>]]></string>
    <string name="detail_history_building_list">รายละเอียดการสำรวจ</string>
    <string name="add_place">เพิ่มสถานที่</string>
    <string name="places_not_found">ไม่พบสถานที่</string>
    <string name="place_type">ประเภทสถานที่</string>
    <string name="format_place_count">%1$d รายการ</string>
    <string name="format_building_count">%1$d อาคาร</string>
    <string name="place_name">ชื่อสถานที่</string>
    <string name="address">ที่อยู่</string>
    <string name="place_subtype_label">ประเภทสถานที่ย่อย</string>
    <string name="please_define_place_name">กรุณาระบุชื่อสถานที่</string>
    <string name="please_define_place_address">กรุณาระบุที่อยู่ของสถานที่</string>
    <string name="please_define_place_type">กรุณาระบุประเภทสถานที่</string>
    <string name="please_define_place_sub_type">กรุณาระบุประเภทย่อยสถานที่</string>
    <string name="cant_save_same_place_name">ไม่สามารถบันทึกได้ เนื่องจากชื่อสถานที่นี้มีอยู่แล้ว</string>

    <!--hint -->
    <string name="touch_to_start_survey">แตะที่ลูกน้ำเพื่อเริ่มสำรวจ</string>
    <string name="touch_to_type_house_no">แตะเพื่อพิมพ์บ้านเลขที่</string>
    <string name="touch_to_type_building_name">แตะเพื่อพิมพ์ชื่ออาคาร</string>

    <string name="notify_only_survey_on_current_device">เฉพาะข้อมูลที่สำรวจด้วยเครื่องนี้</string>
    <string name="building_already_survey">สำรวจแล้ว</string>
    <string name="press_back_again_to_exit">กรุณากดอีกครั้งเพื่อออก</string>
    <string name="location">พิกัด</string>
    <string name="distance_between_place_and_building">เนื่องจากพิกัดอาคารห่างจากพิกัดสถานที่ %1$s กม.</string>
    <string name="edit_place">แก้ไขสถานที่</string>
    <string name="mark_location">บันทึกพิกัด</string>
    <string name="search_building_by_name_hint">พิมพ์ชื่ออาคารเพื่อค้นหา</string>
    <string name="search_place_by_name_hint">พิมพ์ชื่อสถานที่เพื่อค้นหา</string>
    <string name="search_place">ค้นหาสถานที่</string>
    <string name="search">ค้นหา</string>
    <string name="place_name_not_found">
        <![CDATA[คำค้นหา <font color=#E91E63>%1$s</font> ไม่ตรงกับชื่อสถานที่ใด ๆ]]></string>
    <string name="please_wait">กรุณารอสักครู่&#8230;</string>
    <string name="clear_search_history">ล้างประวัติการค้นหา</string>
    <string name="trial">ทดลองใช้งาน</string>
    <string name="powered_by">Powered by</string>
    <string name="copyright">Copyright © 2016 NECTEC - National Electronics and Computers Technology Center. Code
        released under The Apache License, Version 2.0. Image and document released under Creative Common</string>
    <string name="nectec">ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ</string>
    <string name="authentication">ยืนยันตัวตน</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="please_authen">กรุณายืนยันตัวตน</string>
    <string name="check_status">ตรวจสอบสถานะ</string>
    <string name="state_undefined_email">ไม่ระบุ email</string>
    <string name="state_unverified_email">รอการยืนยัน email</string>
    <string name="state_not_approve">รอการอนุมัติจากเจ้าหน้าที่</string>
    <string name="state_active">เข้าสู่ระบบได้</string>
    <string name="upload_data_type">เพิ่ม%1$s</string>
    <string name="update_data_type">แก้ไข%1$s</string>
    <string name="upload_data_success">สำเร็จ %1$d</string>
    <string name="upload_data_fail">ไม่สำเร็จ %1$d</string>
    <string name="ok">ตกลง</string>
    <string name="not_available">N/A</string>
    <string name="view_survey_result">รายงาน</string>
    <string name="survey_result">ผลการสำรวจ</string>
    <string name="key_container_title">ภาชนะที่พบลูกน้ำยุงลายมากที่สุด</string>
    <string name="house_index">HI %1$s%%</string>
    <string name="container_index">CI %1$s%%</string>
    <string name="breteau_index">BI %1$s</string>
    <string name="survey_count">%1$sที่สำรวจทั้งหมด %2$d</string>
    <string name="survey_found_count">- พบลูกน้ำ %1$d</string>
    <string name="survey_not_found_count">- ไม่พบลูกน้ำ %1$d</string>
    <string name="no_container_houses">- ไม่มีภาชนะขังน้ำ %1$d</string>
    <string name="duplicate_survey_count">- สำรวจซ้ำ %1$d ครั้ง</string>
    <string name="sum_person_count">- จำนวนประชากรทั้งหมด %1$d คน</string>
    <string name="survey_container_count">ภาชนะสำรวจทั้งหมด %1$d พบ %2$d</string>
    <string name="cannot_view_survey_result">ไม่ได้รับข้อมูลจากเซิร์ฟเวอร์กรุณาลองใหม่ภายหลัง หรือติดต่อเจ้าหน้าที่</string>
    <string name="description_survey_not_synced">ข้อมูลสำรวจยังไม่ถูกส่งขึ้น cloud</string>
    <string name="please_connect_internet_before_view_entomology">กรุณาเชื่อมต่ออินเทอร์เน็ตก่อนดูผลการสำรวจ</string>
    <string name="error_connection_problem">พบปัญหาการเชื่อมต่ออินเทอร์เน็ต กรุณาตรวจสอบ</string>
    <string name="error_rest_service">พบข้อมูลบางอย่างผิดพลาด ลองอีกครั้ง หรือแจ้ง 02&#8211;5646900ต่อ2513</string>
    <string name="process_time">ประมวลผลเมื่อ</string>
    <string name="no_survey_start_date">ไม่มีข้อมูลวันเริ่มสำรวจ</string>
    <string name="about">เกี่ยวกับ</string>
    <string name="about_license">Open Source Licenses</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_contributor">Contributor</string>

    <string name="choose_building_to_survey">ระบุอาคารเพื่อสำรวจเพิ่มเติม</string>
    <string name="tanrabad_survey">TanRabad SURVEY</string>
    <string name="support_by">สนับสนุนโดย</string>
    <string name="ministry_of_science_and_technology">กระทรวงวิทยาศาสตร์และเทคโนโลยี</string>
    <string name="ministry_of_public_health">กระทรวงสาธารณสุข</string>
    <string name="connect_internet_before_authen">กรุณาเชื่อมต่ออินเตอร์เน็ตเพื่อทำการยืนยันตัวตน</string>
    <string name="connect_internet_before_login">กรุณาเชื่อมต่ออินเตอร์เน็ตก่อนทำการเข้าสู่ระบบ</string>
    <string name="about_th">เกี่ยวกับ</string>
    <string name="preference">การตั้งค่า</string>
    <string name="trb_bi">TanRabad BI</string>
    <string name="trb_report">TanRabad Report</string>
    <string name="trb_watch">TanRabad Watch</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="google_analytic_pref_title">การใช้งานและรายงานข้อบกพร่อง</string>
    <string name="setting">การตั้งค่า</string>
    <string name="delete">ลบ</string>
    <string name="delete_building_msg">เมื่อลบแล้วจะไม่สามารถกู้ข้อมูลอาคารได้</string>
    <string name="delete_building">ลบอาคาร</string>
    <string name="delete_place_msg">เมื่อลบแล้วจะไม่สามารถกู้ข้อมูลสถานที่ได้</string>
    <string name="delete_place">ลบสถานที่</string>
    <string name="delete_survey_msg">เมื่อลบแล้วจะไม่สามารถกู้ข้อมูลการสำรวจได้</string>
    <string name="delete_survey">ลบการสำรวจ</string>
    <string name="authen_error_response">เกืดข้อผิดผลาด หรือคุณไม่ได้ให้สิทธิทันระบาด-สำรวจในการเข้าถึงข้อมูล</string>
    <string name="please_delete_building_in_place">กรุณาลบอาคารทั้งหมด ก่อนลบสถานที่</string>
    <string name="please_enable_internet_before_delete">กรุณาเชื่อมต่ออินเทอร์เน็ตเพื่อลบ</string>
    <string name="manual">คู่มือ</string>
    <string name="displayProfile">แสดงข้อมูลผู้ใช้</string>
    <string name="login_loading">กำลังเข้าสู่ระบบ กรุณารอ</string>
    <string name="back_to_login">กลับไปหน้า login</string>
    <string name="download_first_time_fail">ไม่สามารถใช้งานแอปได้ เนื่องจากการดาวน์โหลดข้อมูลครั้งแรกล้มเหลว</string>
    <string name="please_connect_internet_before_logout">กรุณาเชื่อมต่ออินเทอร์เน็ตก่อนออกจากระบบ</string>
    <string name="trial_warning_msg">ท่านกำลังเข้าสู่โหมด &#8220;การทดสอบ&#8221; ข้อมูลที่ท่านจะทำการบันทึกหลังจากนี้ จะถูกจัดเก็บไว้ในระบบเพียง 1 วัน และไม่สามารถเข้าถึงได้ในแอปพลิเคชันทันระบาดอื่นๆ</string>
    <string name="trial_warning_title">คำเตือน!!!</string>
    <string name="google_maps_key">Google Maps Keys</string>
    <string name="blind_google_maps_key">%1$s*******************************%2$s</string>
    <string name="trb_authen_key">TanRabad-Authen Key</string>
    <string name="blind_trb_authen_key">%1$s******</string>
    <string name="nearby_places">สถานที่ใกล้เคียง</string>
    <string name="nearby_places_not_found">ไม่พบสถานที่ใกล้เคียง</string>
    <string name="nearby_places_caption">สถานที่ใกล้เคียงภายในระยะประมาณ 10 กม.</string>
    <string name="please_enable_gps_before_use">กรุณาเปิดใช้งาน GPS ก่อนใช้งาน</string>
    <string name="please_enable_location_permission_before_use">กรุณาเปิดใช้สิทธิ์การเข้าถึงตำแหน่งปัจจุบันก่อนใช้งาน</string>
    <string name="survey_start">เริ่มสำรวจ!</string>

    <string name="found_newer_version">ตรวจสอบพบทันระบาดสำรวจ version ใหม่ %1$s กรุณาทำการอัพเดทก่อนเข้าใช้งาน</string>
    <string name="update">อัพเดท</string>
    <string name="close">ปิด</string>
    <string name="install_google_chrome">ติดตั้่ง Google Chrome</string>
    <string name="install_google_chrome_descript">ระบบยืนยันตัวตนต้องการ Google Chrome Web Browser เพื่อการทำงานที่สมบูรณ์ กรุณาทำการติดตั้งแล้วลองใหม่อีกครั้ง</string>
    <string name="install">ติดตั้ง</string>

</resources>
