...
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/save"
            android:icon="@mipmap/ic_action_circle_check"
        android:title="@string/save"
            app:showAsAction="always|withText"/>
</menu>

